--- a/portfolio.html
+++ b/portfolio.html
@@ -167,7 +167,7 @@
                 <div class="skill-tag" data-image="img/Data-Science.jpg" data-title="Data Science"><i class="fas fa-project-diagram"></i>Data Science</div>
                 <div class="skill-tag" data-image="img/Robotics-and-AI.jpg" data-title="Robotics and AI"><i class="fas fa-robot"></i>Robotics and AI</div>
                 <div class="skill-tag" data-image="img/Python-for-Beginners.jpg" data-title="Python for Beginners"><i class="fas fa-python"></i>Python for Beginners</div>
-                <div class="skill-tag" data-image="img/img/Introduction-to-Deep-Learning.jpg" data-title="Introduction to Deep Learning"><i class="fas fa-users-cog"><i class="fas fa-network-wired"></i>Introduction to Deep Learning</div>
+                <div class="skill-tag" data-image="img/Introduction-to-Deep-Learning.jpg" data-title="Introduction to Deep Learning"><i class="fas fa-network-wired"></i>Introduction to Deep Learning</div>
                 <div class="skill-tag" data-image="img/Basic-AI-Course.jpg" data-title="Basic AI Course"><i class="fas fa-brain"></i>Basic AI Course</div>
                 <div class="skill-tag" data-image="img/Data-Analytics-Basic.jpg" data-title="Data Analytics Basic"><i class="fas fa-chart-bar"></i>Data Analytics Basic</div>
                 <div class="skill-tag" data-image="img/AI-Platform-for-Thai.jpg" data-title="AI Platform for Thai"><i class="fas fa-users-cog"></i>AI Platform for Thai</div>
@@ -189,7 +189,7 @@
                 <div class="skill-tag" data-image="img/C-Programming.jpg" data-title="C Programming"><i class="fas fa-code"></i>C Programming</div>
                 <div class="skill-tag" data-image="img/Web-Dev-Basic.jpg" data-title="Web Dev Basic"><i class="fas fa-globe"></i>Web Dev Basic</div>
                 <div class="skill-tag" data-image="img/Computer-Software.jpg" data-title="Computer Software"><i class="fas fa-cube"></i>Computer Software</div> 
-                <div class="skill-tag" data-image="img/Computer-Graphic-&-Animation.jpg" data-title="Computer Graphic & Animation><i class="fas fa-cube"></i>Computer Graphic & Animation</div>
+                <div class="skill-tag" data-image="img/Computer-Graphic-&-Animation.jpg" data-title="Computer Graphic & Animation"><i class="fas fa-cube"></i>Computer Graphic & Animation</div>
             </div>
 
             <h3 style="text-align: left; margin-top: 2rem;">Emerging Technologies</h3>
